--- a/login.html
+++ b/login.html
@@ -2,5 +2,7 @@
     <head></head>
     <body>
         <h1>This is a login page</h1>
+        username:<br/>
+        password:
     </body>
 </html>
