--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
         <img src="assets/logo.png" height="50px" alt="">
         <h1>Blood bank system</h1>
         <p>details goes here</p>
+        <footer>This is footer</footer>
     </body>
 </html>
