--- a/forgot-password.html
+++ b/forgot-password.html
@@ -2,5 +2,6 @@
     <head></head>
     <body>
         <h1>This is forgot password page</h1>
+        <footer>pwd rec page footer</footer>
     </body>
 </html>
