upcode link added in home page footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <img src="assets/logo.png" height="50px" alt="">
         <h1>Blood bank system</h1>
         <p>details goes here</p>
-        <footer>This is footer</footer>
+        <footer>This is footer
+            <a href="www.upcode.in">upcode</a>
+        </footer>
     </body>
 </html>
