--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <img src="assets/logo.png" height="50px" alt="">
         <h1>Blood bank system</h1>
         <p>details goes here</p>
-        <footer>This is footer</footer>
+        <footer>This is footer
+            <a>About us</a>
+            <a>Contact us</a>
+        </footer>
     </body>
 </html>
