Added social media links in home page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         <footer>This is footer
             <a>About us</a>
             <a>Contact us</a>
+            <div class="social">
+                <a>Youtube</a>
+                <a>Instagram</a>
+            </div>
         </footer>
     </body>
 </html>
