Fixed about and contact links

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <h1>Blood bank system</h1>
         <p>details goes here</p>
         <footer>This is footer
-            <a>About us</a>
-            <a>Contact us</a>
+            <a href="">About us</a>
+            <a href="">Contact us</a>
         </footer>
     </body>
 </html>
