--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <h1>Blood bank system</h1>
         <p>details goes here</p>
         <footer>This is footer
-            <a href="">About us</a>
-            <a href="">Contact us</a>
+            <a>About us</a>
+            <a>Contact us</a>
             <div class="social">
                 <a>Youtube</a>
                 <a>Instagram</a>
